@@ -16,6 +16,8 @@
 - BUG: The log statistics by date were shown in reverse order. (Stefan)
 - BUG: The /closeonend command line param was overwritten by the corresponding
        user setting if /closeonend:0 was used. (Stefan)
+- BUG: When deleting a log cache (via settings dialog), the URL->UUID map
+       wasn't updated (Stefan Fuhrmann)
 
 Version 1.5.0-beta1
 - NEW: Implemented 'merge reintegrate': new page in the merge wizard. (Stefan)
